--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
         </section>
 
         <aside id="sidebar">
-          {% if site.show_downloads %}
+<!--           {% if site.show_downloads %}
             <a href="{{ site.github.zip_url }}" class="button">
               <small>Download</small>
               .zip file
@@ -46,7 +46,7 @@
               <small>Download</small>
               .tar.gz file
             </a>
-          {% endif %}
+          {% endif %} -->
 
           {% if site.github.is_project_page %}
             <p class="repo-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</p>
