Update index page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,9 @@
           {% endif %} -->
 
           {% if site.github.is_user_page %}
-            <img src="images/image_0.JPG">
+            <div style="float:right;padding:13px">
+              <img src="./images/image_0.JPG" height="256px">
+            </div>
           {% endif %}
 
           {% if site.github.is_project_page %}
