Update index page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@
           {% endif %} -->
 
           {% if site.github.is_user_page %}
-            <img src="./images/image_0.JPG" height="225px">
+            <img src="./images/image_01.png" height="220px">
           {% endif %}
 
           {% if site.github.is_project_page %}
