Update index page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,6 +51,8 @@
           {% if site.github.is_user_page %}
             <img src="./images/image_01.png" height="220px">
             <br />
+            <p>Email: mrshininnnnn<b>at</b>gmail<b>dot</b>com</p>
+            <br />
             <a href="https://www.linkedin.com/in/stshining/"><img src="./images/icon_01.png" height="44px"></a>
           {% endif %}
 
