Update index page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,9 +50,17 @@
 
           {% if site.github.is_user_page %}
             <img src="./images/image_01.png" height="220px">
-            <br />
-            <p>Email: mrshininnnnn<b>at</b>gmail<b>dot</b>com</p>
-            <br />
+            <br>
+            <p>
+            Machine Learning Engineer | Learnable, Inc. <br>
+            Graduate Student <br>
+            Applied Data Science | School of Information Studies | Syracuse University <br>
+            Computer Science | College of Computing | Georgia Institute of Technology <br>
+            Research Interests: Natural Language Processing | Reinforcement Learning <br>
+            WeChat: STShining <br>
+            Email: mrshininnnnn<b>at</b>gmail<b>dot</b>com
+            </p>
+            <br>
             <a href="https://www.linkedin.com/in/stshining/"><img src="./images/icon_01.png" height="44px"></a>
           {% endif %}
 
