--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,7 @@
           {% endif %} -->
 
           {% if site.github.is_user_page %}
-            <img src="./images/image_01.png" height="220px">
+            <img src="./assets/images/image_01.png" width="200px">
             <br>
             <p>
             Machine Learning Engineer | Learnable, Inc. <br>
@@ -60,8 +60,7 @@
             WeChat: STShining <br>
             Email: mrshininnnnn<b>at</b>gmail<b>dot</b>com
             </p>
-            <br>
-            <a href="https://www.linkedin.com/in/stshining/"><img src="./images/icon_01.png" height="44px"></a>
+            <a href="https://www.linkedin.com/in/stshining/"><img src="./assets/images/icon_01.png" width="40px"></a>
           {% endif %}
 
           {% if site.github.is_project_page %}
