Update index page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,15 +52,11 @@
             <img src="./assets/images/image_01.png" width="200px">
             <br>
             <p>
-            Machine Learning Engineer | Learnable, Inc. <br>
-            Graduate Student <br>
-            Applied Data Science | School of Information Studies | Syracuse University <br>
-            Computer Science | College of Computing | Georgia Institute of Technology <br>
-            Research Interests: Natural Language Processing | Reinforcement Learning <br>
-            WeChat: STShining <br>
-            Email: mrshininnnnn<b>at</b>gmail<b>dot</b>com
+            Machine Learning Engineer Learnable, Inc. <br>
+            <img src="./assets/images/icon_02.png" width="10px"> STShining <br>
+            <img src="./assets/images/icon_02.png" width="10px"> mrshininnnnn<b>at</b>gmail<b>dot</b>com
             </p>
-            <a href="https://www.linkedin.com/in/stshining/"><img src="./assets/images/icon_01.png" width="40px"></a>
+            <a href="https://www.linkedin.com/in/stshining/"><img src="./assets/images/icon_02.png" width="40px"></a>
           {% endif %}
 
           {% if site.github.is_project_page %}
