--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,13 +49,14 @@
           {% endif %} -->
 
           {% if site.github.is_user_page %}
-            <img src="./assets/images/image_01.png" width="200px">
-            <br>
+            <img src="./assets/images/image_01.png" width="200px"><br>
+            <h4>Ning Shi</h4>
             <p>
             Machine Learning Engineer Learnable, Inc. <br>
             <img src="./assets/images/icon_01.png" width="15px"> STShining <br>
             <img src="./assets/images/icon_02.png" width="15px"> mrshininnnnn<b>at</b>gmail<b>dot</b>com
             </p>
+            <img src="./assets/images/bar.png" width="200px">
             <a href="https://www.linkedin.com/in/stshining/"><img src="./assets/images/icon_03.png" width="40px"></a>
           {% endif %}
 
