--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,14 +50,15 @@
 
           {% if site.github.is_user_page %}
             <img src="./assets/images/image_01.png" width="200px"><br>
-            <h4>Ning Shi</h4>
+            <b>Ning Shi</b>
             <p>
             Machine Learning Engineer Learnable, Inc. <br>
             <img src="./assets/images/icon_01.png" width="15px"> STShining <br>
-            <img src="./assets/images/icon_02.png" width="15px"> mrshininnnnn<b>at</b>gmail<b>dot</b>com
-            </p>
+            <img src="./assets/images/icon_02.png" width="15px"> mrshininnnnn<b>at</b>gmail<b>dot</b>com <br>
             <img src="./assets/images/bar.png" width="200px">
+            </p>
             <a href="https://www.linkedin.com/in/stshining/"><img src="./assets/images/icon_03.png" width="40px"></a>
+            <a href="https://github.com/MrShininnnnn"><img src="./assets/images/icon_04.png" width="40px"></a>
           {% endif %}
 
           {% if site.github.is_project_page %}
