--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,7 +59,7 @@
               <img src="./assets/images/bar.png" width="200px"> <br>
               <a href="https://github.com/MrShininnnnn"><img src="./assets/images/icon_03.png" width="40px"></a>
               <a href="https://www.linkedin.com/in/stshining/"><img src="./assets/images/icon_04.png" width="40px"></a>
-              <img src="./assets/images/bar.png" width="200px"> <br>
+              <br><img src="./assets/images/bar.png" width="200px">
             </p>
           {% endif %}
 
