--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' }}" media="screen" type="text/css">
     <link rel="stylesheet" href="{{ '/assets/css/print.css' }}" media="print" type="text/css">
+    <meta name="google-site-verification" content="5nNLZZrN2cCkqk-YjHhN-2gGOZBmEb_Unc8oTvRtCCo" />
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
