Update index page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' }}" media="screen" type="text/css">
-    <link rel="stylesheet" href="{{ '/assets/css/print.css' }}" media="print" type="text/css">
+    <!-- <link rel="stylesheet" href="{{ '/assets/css/print.css' }}" media="print" type="text/css"> -->
     <meta name="google-site-verification" content="5nNLZZrN2cCkqk-YjHhN-2gGOZBmEb_Unc8oTvRtCCo" />
 
 {% seo %}
