Update index page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,6 +35,18 @@
       </div>
     </header>
 
+    <div id="main">
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Home</a></li>
+        </ul>
+      </nav>
+    </div>
+
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
