--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="{{ '/assets/css/styles.css' }}" media="screen" type="text/css">
     <link rel="stylesheet" href="{{ '/assets/css/print.css' }}" media="print" type="text/css">
+    <link rel="stylesheet" href="{{ '/assets/css/navigation.css' }}" type="text/css">
     <meta name="google-site-verification" content="5nNLZZrN2cCkqk-YjHhN-2gGOZBmEb_Unc8oTvRtCCo" />
 
 {% seo %}
@@ -38,11 +39,9 @@
     <div id="main">
       <nav>
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Home</a></li>
+          <li><a href="#">Project</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">CV</a></li>
         </ul>
       </nav>
     </div>
