--- a/assets/css/navigation.scss
+++ b/assets/css/navigation.scss
@@ -1,3 +1,6 @@
+---
+---
+
 #main{ 
   width: 100%; 
   height: 100vh; 
@@ -13,5 +16,5 @@ nav{
 nav ul li{
   list-style-type: none; 
   display: inline-block;
-      
+
 }
