--- a/assets/css/navigation.scss
+++ b/assets/css/navigation.scss
@@ -1,16 +1,17 @@
 ---
 ---
 
-#main{ 
-  width: 100%; 
-  height: 100vh; 
-}
-
 nav{ 
   width: 100%; 
   height: 80px;
-  background-color: #000;
+  background-color: #000; 
+  line-height: 80px;
 
+}
+
+nav ul{
+  float: left; 
+  margin-left: 140px;
 }
 
 nav ul li{
