--- a/assets/css/navigation.scss
+++ b/assets/css/navigation.scss
@@ -3,15 +3,16 @@
 
 nav{ 
   width: 100%; 
-  height: 80px;
-  background-color: #000; 
-  line-height: 80px;
-
+  background-color: #fbfbfb;
+  line-height: 107px;
+  margin-left: 75px; 
+  
 }
 
 nav ul{
   float: left; 
-  margin-left: 140px;
+  margin: auto;
+
 }
 
 nav ul li{
@@ -21,6 +22,9 @@ nav ul li{
 }
 
 nav ul li a{
+  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif; 
+  font-size: xx-large; 
   text-decoration: none;
   padding: 30px;
+
 }
