--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,11 +37,13 @@
     </header>
 
       <nav>
-        <ul>
-          <li><a href="#">Project</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">CV</a></li>
-        </ul>
+        <div class="inner">
+          <ul>
+            <li><a href="#">Project</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">CV</a></li>
+          </ul>
+        </div>
       </nav>
 
     <div id="content-wrapper">
