--- a/assets/css/navigation.scss
+++ b/assets/css/navigation.scss
@@ -5,8 +5,7 @@ nav{
   width: 100%; 
   background-color: #fbfbfb;
   line-height: 107px;
-  margin-left: 75px; 
-  
+
 }
 
 nav ul{
@@ -18,6 +17,11 @@ nav ul{
 nav ul li{
   list-style-type: none; 
   display: inline-block;
+  transition: 0.5s all;
+}
+
+nav ul li:hover {
+    background-color: black;
 
 }
 
