--- a/assets/css/navigation.scss
+++ b/assets/css/navigation.scss
@@ -3,15 +3,15 @@
 
 nav{ 
   width: 100%; 
+  height: 80px;
   background-color: #fbfbfb;
   line-height: 107px;
-
 }
 
 nav ul{
   float: left; 
   margin: auto;
-
+  padding: 0px;
 }
 
 nav ul li{
@@ -20,15 +20,13 @@ nav ul li{
   transition: 0.5s all;
 }
 
-nav ul li:hover {
-    background-color: black;
-
+nav ul li a:hover {
+    color: #9ddcff; 
 }
 
 nav ul li a{
   font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif; 
   font-size: xx-large; 
   text-decoration: none;
-  padding: 30px;
-
+  padding-right: 50px;
 }
