Update index page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="{{ '/assets/css/styles.css' }}" media="screen" type="text/css">
     <link rel="stylesheet" href="{{ '/assets/css/print.css' }}" media="print" type="text/css">
+    <link rel="stylesheet" href="{{ '/assets/css/main.css' }}" type="text/css">
     <link rel="stylesheet" href="{{ '/assets/css/navigation.css' }}" type="text/css">
     <meta name="google-site-verification" content="5nNLZZrN2cCkqk-YjHhN-2gGOZBmEb_Unc8oTvRtCCo" />
 
@@ -39,7 +40,11 @@
       <nav>
         <div class="inner">
           <ul>
+            <li><a href="#">Coursework</a></li>
             <li><a href="#">Project</a></li>
+            <li><a href="#">Publication</a></li>
+            <li><a href="#">Talk</a></li>
+            <li><a href="#">Teaching</a></li>
             <li><a href="#">Blog</a></li>
             <li><a href="#">CV</a></li>
           </ul>
