Update index page

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -24,27 +24,22 @@
   <body>
     <header>
       <div class="inner">
-        <a href="{{ '/' | absolute_url }}">
+        <a href="https://mrshininnnnn.github.io/">
           <h1>{{ site.title }}</h1>
         </a>
         <h2>{{ site.description }}</h2>
-        {% if site.github.is_project_page %}
-          <a href="{{ site.github.repository_url }}" class="button"><small>View project on</small> GitHub</a>
-        {% endif %}
-        {% if site.github.is_user_page %}
           <a href="{{ site.github.owner_url }}" class="button"><small>Follow me on</small> GitHub</a>
-        {% endif %}
       </div>
     </header>
 
       <nav>
         <div class="inner">
           <ul>
-            <li><a href="#">Coursework</a></li>
-            <li><a href="#">Project</a></li>
-            <li><a href="#">Publication</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">CV</a></li>
+            <li><a href="https://mrshininnnnn.github.io/coursework/">Coursework</a></li>
+            <li><a href="https://mrshininnnnn.github.io/">Project</a></li>
+            <li><a href="https://mrshininnnnn.github.io/">Publication</a></li>
+            <li><a href="https://mrshininnnnn.github.io/">Blog</a></li>
+            <li><a href="https://mrshininnnnn.github.io/">CV</a></li>
           </ul>
         </div>
       </nav>
@@ -83,9 +78,9 @@
             </p>
           {% endif %}
 
-          {% if site.github.is_project_page %}
+<!--           {% if site.github.is_project_page %}
             <p class="repo-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</p>
-          {% endif %}
+          {% endif %} -->
         </aside>
       </div>
     </div>
