--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -64,17 +64,17 @@
           {% endif %} -->
 
           {% if site.github.is_user_page %}
-            <img src="./assets/images/image_01.png" width="200px"><br>
+            <img src="/assets/images/image_01.png" width="200px"><br>
             <p>
               <b>Ning Shi</b><br>
               Machine Learning Engineer <br>
               Learnable, Inc. <br>
-              <img src="./assets/images/icon_01.png" width="15px"> STShining <br>
-              <img src="./assets/images/icon_02.png" width="15px"> mrshininnnnn<b>at</b>gmail<b>dot</b>com <br>
-              <img src="./assets/images/bar.png" width="200px"> <br>
-              <a href="https://github.com/MrShininnnnn"><img src="./assets/images/icon_03.png" width="40px"></a>
-              <a href="https://www.linkedin.com/in/stshining/"><img src="./assets/images/icon_04.png" width="40px"></a>
-              <br><img src="./assets/images/bar.png" width="200px">
+              <img src="/assets/images/icon_01.png" width="15px"> STShining <br>
+              <img src="/assets/images/icon_02.png" width="15px"> mrshininnnnn<b>at</b>gmail<b>dot</b>com <br>
+              <img src="/assets/images/bar.png" width="200px"> <br>
+              <a href="https://github.com/MrShininnnnn"><img src="/assets/images/icon_03.png" width="40px"></a>
+              <a href="https://www.linkedin.com/in/stshining/"><img src="/assets/images/icon_04.png" width="40px"></a>
+              <br><img src="/assets/images/bar.png" width="200px">
             </p>
           {% endif %}
 
