--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -36,10 +36,10 @@
         <div class="inner">
           <ul>
             <li><a href="https://mrshininnnnn.github.io/coursework/">Coursework</a></li>
-            <li><a href="https://mrshininnnnn.github.io/">Project</a></li>
-            <li><a href="https://mrshininnnnn.github.io/">Publication</a></li>
-            <li><a href="https://mrshininnnnn.github.io/">Blog</a></li>
-            <li><a href="https://mrshininnnnn.github.io/">CV</a></li>
+            <li><a href="https://mrshininnnnn.github.io/project/">Project</a></li>
+            <li><a href="https://mrshininnnnn.github.io/publication/">Publication</a></li>
+            <li><a href="https://mrshininnnnn.github.io/blog/">Blog</a></li>
+            <li><a href="https://mrshininnnnn.github.io/cv/">CV</a></li>
           </ul>
         </div>
       </nav>
