Update index page

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -35,6 +35,7 @@
       <nav>
         <div class="inner">
           <ul>
+            <li><a href="https://mrshininnnnn.github.io/">About</a></li>
             <li><a href="https://mrshininnnnn.github.io/coursework/">Coursework</a></li>
             <li><a href="https://mrshininnnnn.github.io/project/">Project</a></li>
             <li><a href="https://mrshininnnnn.github.io/publication/">Publication</a></li>
