--- a/assets/css/navigation.scss
+++ b/assets/css/navigation.scss
@@ -26,7 +26,7 @@ nav ul li a:hover {
 
 nav ul li a{
   font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif; 
-  font-size: xx-large; 
+  font-size: x-large; 
   text-decoration: none;
   padding-right: 50px;
 }
