--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -32,20 +32,24 @@
       </div>
     </header>
 
-      <nav>
-        <div class="inner">
-          <ul>
-            <li><a href="https://mrshininnnnn.github.io/">About</a></li>
-            <li><a href="https://mrshininnnnn.github.io/coursework/">Coursework</a></li>
-            <li><a href="https://mrshininnnnn.github.io/project/">Project</a></li>
-            <li><a href="https://mrshininnnnn.github.io/publication/">Publication</a></li>
-            <li><a href="https://mrshininnnnn.github.io/blog/">Blog</a></li>
-            <li><a href="https://mrshininnnnn.github.io/cv/">CV</a></li>
-          </ul>
-        </div>
-      </nav>
-      <div class="inner"> 
-            <center> Ning Shi (石宁) </center>
+    <nav>
+      <div class="inner">
+        <ul>
+          <li><a href="https://mrshininnnnn.github.io/">About</a></li>
+          <li><a href="https://mrshininnnnn.github.io/coursework/">Coursework</a></li>
+          <li><a href="https://mrshininnnnn.github.io/project/">Project</a></li>
+          <li><a href="https://mrshininnnnn.github.io/publication/">Publication</a></li>
+          <li><a href="https://mrshininnnnn.github.io/blog/">Blog</a></li>
+          <li><a href="https://mrshininnnnn.github.io/cv/">CV</a></li>
+        </ul>
       </div>
+    </nav>
+
+    <div id="content-wrapper">
+      <div class="inner clearfix">
+        <center>Ning Shi (石宁)</center>
+      </div>
+    </div>
+
   </body>
 </html>
