--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -14,8 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="{{ '/assets/css/styles.css' }}" media="screen" type="text/css">
     <link rel="stylesheet" href="{{ '/assets/css/print.css' }}" media="print" type="text/css">
-    <link rel="stylesheet" href="{{ '/assets/css/main.css' }}" type="text/css">
-    <link rel="stylesheet" href="{{ '/assets/css/navigation.css' }}" type="text/css">
+    <link rel="stylesheet" href="{{ '/assets/css/cv.css' }}" type="text/css">
     <meta name="google-site-verification" content="5nNLZZrN2cCkqk-YjHhN-2gGOZBmEb_Unc8oTvRtCCo" />
 
 {% seo %}
@@ -47,7 +46,43 @@
 
     <div id="content-wrapper">
       <div class="inner clearfix">
-        <center>Ning Shi (石宁)</center>
+        <center> 
+          <h1>Ning Shi (石宁)</h1> 
+          Mchine Learning Engineer, Learnable, Inc. <br> 
+          Graduate Student, Computer Science, Georgia Institute of Technology <br> 
+          Graduate Student, Applied Data Science, Syracuse University 
+        </center>
+
+        <h1 id="section"> Education</h1>
+        <hr noshade>
+
+        <a id="title_left"><b> Georgia Institute of Technology </b></a>
+        <a id="title_right"><b> Atlanta, USA </b></a>
+        <li><a id="left"> Master of Science in Computer Science </a>
+        <a id="right"><i> Sep. 2019 - Now </i></a></li>
+
+        <a id="title_left"><b> Syracuse University </b></a>
+        <a id="title_right"><b> Syracuse, USA </b></a>
+        <li><a id="left"> Master of Science in Applied Data Science </a>
+        <a id="right"><i> Sep. 2018 - Now </i></a></li>
+
+        <a id="title_left"><b> New York University </b></a>
+        <a id="title_right"><b> New York, USA </b></a>
+        <li><a id="left"> Master of Science in Management and Systems </a>
+        <a id="right"><i> Sep. 2016 - May. 2018 </i></a></li>
+
+        <a id="title_left"><b> Donghua University </b></a>
+        <a id="title_right"><b> Shanghai, China </b></a>
+        <li><a id="left"> Bachelor of Management in Electronic Commerc </a>
+        <a id="right"><i> Sep. 2010 - Jun. 2014 </i></a></li>
+
+        <h1 id="section"> Experience</h1>
+        <hr noshade>
+        <a id="title_left"><b> Learnable, Inc. </b></a>
+        <a id="title_right"><b> Boston, USA </b></a>
+        <li><a id="left"> Machine Learning Engineer </a>
+        <a id="right"><i> Sep. 2018 - Now </i></a></li>
+
       </div>
     </div>
 
