--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -79,10 +79,43 @@
 
         <h1 id="section"> Experience</h1>
         <hr noshade>
+
         <a id="title_left"><b> Learnable, Inc. </b></a>
         <a id="title_right"><b> Boston, USA </b></a>
-        <li><a id="left"> Machine Learning Engineer </a>
-        <a id="right"><i> Sep. 2018 - Now </i></a></li>
+        <a id="title_left"> Machine Learning Engineer </a>
+        <a id="title_right"><i> Sep. 2018 - Now </i></a>
+        <a id="title_left"> Machine Learning Engineer Intern</a>
+        <a id="title_right"><i> Jul. 2018 - Aug. 2018 </i></a>
+        <li> Applied machine learning techniques to personalize educational productions for users </li>
+        <li> Worked in a fast-paced and aglie environment to deliver extra features for online productions </li>
+        <li> Followed latest papers and reproduced models to improve existing productions </li>
+        <li> Python, Tensorflow, PyTorch, Keras</li>
+        <a id="title_left"><b> Pythagoras Investment Management LLC </b></a>
+        <a id="title_right"><b> New York, USA </b></a>
+        <a id="title_left"> Algorithm Engineer Intern </a>
+        <a id="title_right"><i> Dec. 2017 - May. 2018 </i></a>
+        <li> Designed and developed pipelines for data preprocessing, data integrity check, and data storage </li>
+        <li> Developed digital currency monitors and underlying modules for trading systems </li>
+        <li> Requested, preprocessed and managed data over 10+ exchanges’ API </li>
+        <li> HTML, CSS, JavaScript, Python, Flask, MongoDB </li>
+
+        <h1 id="section"> Technical Projects</h1>
+        <hr noshade>
+        <a id="title_left"><b> Textual Classification </b></a>
+        <a id="title_right"><b> Learnable, Inc. </b></a>
+        <a id="title_left"> High School Physics Questions Knowledge Points Tagging </b></a>
+        <a id="title_right"><i> Jul. 2018 - Sep. 2018 </i></a>
+
+        <h1 id="section"> Academic Projects</h1>
+        <hr noshade>
+        <a id="title_left"><b> HackNYU </b></a>
+        <a id="title_right"><b> New York University </b></a>
+        <a id="title_left"> Lung Cancer Detection Using Deep Learning </a>
+        <a id="title_right"><i> Mar. 2017 - Apr. 2017 </i></a>
+
+        <h1 id="section"> Services</h1>
+        <hr noshade>
+        <a id="left"> Secondary Reviewer of EMNLP-IJCNLP 2019 </a>
 
       </div>
     </div>
