--- a/assets/css/cv.scss
+++ b/assets/css/cv.scss
@@ -1,6 +1,14 @@
 ---
 ---
 
+h1 {
+  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+}
+
+hr {
+  margin-top: 0; 
+}
+
 #section
 {
   margin-block-end: 0;
