--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -57,43 +57,43 @@
         <h1 id="section"> Education</h1>
         <hr noshade>
 
-        <a id="title_left"><b> Georgia Institute of Technology </b></a>
-        <a id="title_right"><b> Atlanta, USA </b></a>
-        <li><a id="left"> Master of Science in Computer Science </a>
-        <a id="right"><i> Sep. 2019 - Now </i></a></li>
+        <p id="title_left"><b> Georgia Institute of Technology </b></p>
+        <p id="title_right"><b> Atlanta, USA </b></p>
+        <li><p id="left"> Master of Science in Computer Science </p>
+        <p id="right"><i> Sep. 2019 - Now </i></p></li>
 
-        <a id="title_left"><b> Syracuse University </b></a>
-        <a id="title_right"><b> Syracuse, USA </b></a>
-        <li><a id="left"> Master of Science in Applied Data Science </a>
-        <a id="right"><i> Sep. 2018 - Now </i></a></li>
+        <p id="title_left"><b> Syracuse University </b></p>
+        <p id="title_right"><b> Syracuse, USA </b></p>
+        <li><p id="left"> Master of Science in Applied Data Science </p>
+        <p id="right"><i> Sep. 2018 - Now </i></p></li>
 
-        <a id="title_left"><b> New York University </b></a>
-        <a id="title_right"><b> New York, USA </b></a>
-        <li><a id="left"> Master of Science in Management and Systems </a>
-        <a id="right"><i> Sep. 2016 - May. 2018 </i></a></li>
+        <p id="title_left"><b> New York University </b></p>
+        <p id="title_right"><b> New York, USA </b></p>
+        <li><p id="left"> Master of Science in Management and Systems </a>
+        <p id="right"><i> Sep. 2016 - May. 2018 </i></p></li>
 
-        <a id="title_left"><b> Donghua University </b></a>
-        <a id="title_right"><b> Shanghai, China </b></a>
-        <li><a id="left"> Bachelor of Management in Electronic Commerc </a>
-        <a id="right"><i> Sep. 2010 - Jun. 2014 </i></a></li>
+        <p id="title_left"><b> Donghua University </b></p>
+        <p id="title_right"><b> Shanghai, China </b></p>
+        <li><p id="left"> Bachelor of Management in Electronic Commerc </p>
+        <p id="right"><i> Sep. 2010 - Jun. 2014 </i></p></li>
 
         <h1 id="section"> Experience</h1>
         <hr noshade>
 
-        <a id="title_left"><b> Learnable, Inc. </b></a>
-        <a id="title_right"><b> Boston, USA </b></a>
-        <a id="title_left"> Machine Learning Engineer </a>
-        <a id="title_right"><i> Sep. 2018 - Now </i></a>
-        <a id="title_left"> Machine Learning Engineer Intern</a>
-        <a id="title_right"><i> Jul. 2018 - Aug. 2018 </i></a>
+        <p id="title_left"><b> Learnable, Inc. </b></p>
+        <p id="title_right"><b> Boston, USA </b></p>
+        <p id="title_left"> Machine Learning Engineer </p>
+        <p id="title_right"><i> Sep. 2018 - Now </i></p>
+        <p id="title_left"> Machine Learning Engineer Intern</p>
+        <p id="title_right"><i> Jul. 2018 - Aug. 2018 </i></p>
         <li> Applied machine learning techniques to personalize educational productions for users </li>
         <li> Worked in a fast-paced and aglie environment to deliver extra features for online productions </li>
         <li> Followed latest papers and reproduced models to improve existing productions </li>
         <li> Python, Tensorflow, PyTorch, Keras</li>
-        <a id="title_left"><b> Pythagoras Investment Management LLC </b></a>
-        <a id="title_right"><b> New York, USA </b></a>
-        <a id="title_left"> Algorithm Engineer Intern </a>
-        <a id="title_right"><i> Dec. 2017 - May. 2018 </i></a>
+        <p id="title_left"><b> Pythagoras Investment Management LLC </b></p>
+        <p id="title_right"><b> New York, USA </b></p>
+        <p id="title_left"> Algorithm Engineer Intern </p>
+        <p id="title_right"><i> Dec. 2017 - May. 2018 </i></p>
         <li> Designed and developed pipelines for data preprocessing, data integrity check, and data storage </li>
         <li> Developed digital currency monitors and underlying modules for trading systems </li>
         <li> Requested, preprocessed and managed data over 10+ exchanges’ API </li>
@@ -101,21 +101,21 @@
 
         <h1 id="section"> Technical Projects</h1>
         <hr noshade>
-        <a id="title_left"><b> Textual Classification </b></a>
-        <a id="title_right"><b> Learnable, Inc. </b></a>
-        <a id="title_left"> High School Physics Questions Knowledge Points Tagging </b></a>
-        <a id="title_right"><i> Jul. 2018 - Sep. 2018 </i></a>
+        <p id="title_left"><b> Textual Classification </b></p>
+        <p id="title_right"><b> Learnable, Inc. </b></p>
+        <p id="title_left"> High School Physics Questions Knowledge Points Tagging </b></p>
+        <p id="title_right"><i> Jul. 2018 - Sep. 2018 </i></p>
 
         <h1 id="section"> Academic Projects</h1>
         <hr noshade>
-        <a id="title_left"><b> HackNYU </b></a>
-        <a id="title_right"><b> New York University </b></a>
-        <a id="title_left"> Lung Cancer Detection Using Deep Learning </a>
-        <a id="title_right"><i> Mar. 2017 - Apr. 2017 </i></a>
+        <p id="title_left"><b> HackNYU </b></p>
+        <p id="title_right"><b> New York University </b></p>
+        <p id="title_left"> Lung Cancer Detection Using Deep Learning </p>
+        <p id="title_right"><i> Mar. 2017 - Apr. 2017 </i></p>
 
         <h1 id="section"> Services</h1>
         <hr noshade>
-        <a id="left"> Secondary Reviewer of EMNLP-IJCNLP 2019 </a>
+        <p id="left"> Secondary Reviewer of EMNLP-IJCNLP 2019 </p>
 
       </div>
     </div>
