--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -8,7 +8,8 @@
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
       gtag('config', 'UA-155082049-1');
-    </script>
+    </script> 
+    <script src="https://kit.fontawesome.com/e283fec6bc.js" crossorigin="anonymous"></script>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -49,6 +50,11 @@
       <div class="inner clearfix">
         <center> 
           <h1>Ning Shi (石宁)</h1> 
+          <a href="mailto:MrShininnnnn@gmail.com"><i class="fas fa-envelope"></i>MrShininnnnn[at]gmail[dot]com</a>
+          <a href="https://mrshininnnnn.github.io/"><i class="fas fa-home"></i>Homepage</a>
+          <a href="https://www.linkedin.com/in/stshining/"><i class="fas fa-linkedin"></i>LinkedIn</a>
+          <a href="https://github.com/MrShininnnnn"><i class="fab fa-github-alt"></i></i>GitHub</a>
+          <br>
           Mchine Learning Engineer, Learnable, Inc. <br> 
           Graduate Student, Computer Science, Georgia Institute of Technology <br> 
           Graduate Student, Applied Data Science, Syracuse University 
@@ -96,7 +102,7 @@
         <p id="title_right"><i> Dec. 2017 - May. 2018 </i></p>
         <li> Designed and developed pipelines for data preprocessing, data integrity check, and data storage </li>
         <li> Developed digital currency monitors and underlying modules for trading systems </li>
-        <li> Requested, preprocessed and managed data over 10+ exchanges’ API </li>
+        <li> Requested, preprocessed and managed data over 10+ exchanges’ APIs </li>
         <li> HTML, CSS, JavaScript, Python, Flask, MongoDB </li>
 
         <h1 id="section"> Technical Projects</h1>
