--- a/assets/css/cv.scss
+++ b/assets/css/cv.scss
@@ -9,6 +9,20 @@ hr {
   margin-top: 0; 
 }
 
+a:hover {
+  color: #666666;
+}  
+
+a{
+  color: black; 
+  text-decoration: none;
+}
+
+i {
+  color:#9ddcff; 
+  text-shadow:2px 2px 4px #000000;
+}
+
 p {
   color: #666666;  
 }
