--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -50,10 +50,10 @@
       <div class="inner clearfix">
         <center> 
           <h1>Ning Shi (石宁)</h1> 
-          <a href="mailto:MrShininnnnn@gmail.com"><i class="fas fa-envelope"></i>MrShininnnnn[at]gmail[dot]com</a>
-          <a href="https://mrshininnnnn.github.io/"><i class="fas fa-home"></i>Homepage</a>
-          <a href="https://www.linkedin.com/in/stshining/"><i class="fas fa-linkedin"></i>LinkedIn</a>
-          <a href="https://github.com/MrShininnnnn"><i class="fab fa-github-alt"></i></i>GitHub</a>
+          <a href="mailto:MrShininnnnn@gmail.com"><i class="fas fa-envelope"></i> MrShininnnnn[at]gmail[dot]com </a>
+          <a href="https://mrshininnnnn.github.io/"><i class="fas fa-home"></i> Homepage </a>
+          <a href="https://www.linkedin.com/in/stshining/"><i class="fab fa-linkedin"></i> LinkedIn </a>
+          <a href="https://github.com/MrShininnnnn"><i class="fab fa-github-alt"></i> GitHub </a>
           <br>
           Mchine Learning Engineer, Learnable, Inc. <br> 
           Graduate Student, Computer Science, Georgia Institute of Technology <br> 
