--- a/assets/css/cv.scss
+++ b/assets/css/cv.scss
@@ -10,11 +10,11 @@ hr {
 }
 
 a:hover {
-  color: #666666;
+  color: #9ddcff;
 }  
 
 a{
-  color: black; 
+  color: #666666; 
   text-decoration: none;
 }
 
