--- a/assets/css/navigation.scss
+++ b/assets/css/navigation.scss
@@ -25,6 +25,7 @@ nav ul li a:hover {
 }
 
 nav ul li a{
+  color: #2879d0;
   font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif; 
   font-size: x-large; 
   text-decoration: none;
