--- a/assets/css/cv.scss
+++ b/assets/css/cv.scss
@@ -13,12 +13,12 @@ a:hover {
   color: #9ddcff;
 }  
 
-a{
+center a{
   color: #666666; 
   text-decoration: none;
 }
 
-i {
+center i {
   color:#9ddcff; 
   text-shadow:2px 2px 4px #000000;
 }
