--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -9,13 +9,13 @@
       gtag('js', new Date());
       gtag('config', 'UA-155082049-1');
     </script> 
-    <script src="https://kit.fontawesome.com/e283fec6bc.js" crossorigin="anonymous"></script>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="{{ '/assets/css/styles.css' }}" media="screen" type="text/css">
     <link rel="stylesheet" href="{{ '/assets/css/print.css' }}" media="print" type="text/css">
     <link rel="stylesheet" href="{{ '/assets/css/cv.css' }}" type="text/css">
+    <link rel="stylesheet" href="{{ '/assets/css/all.css' }}" type="text/css">
     <link rel="stylesheet" href="{{ '/assets/css/navigation.css' }}" type="text/css">
     <meta name="google-site-verification" content="5nNLZZrN2cCkqk-YjHhN-2gGOZBmEb_Unc8oTvRtCCo" />
 
@@ -50,9 +50,9 @@
       <div class="inner clearfix">
         <center> 
           <h1>Ning Shi (石宁)</h1> 
-          <a href="mailto:MrShininnnnn@gmail.com"><i class="fas fa-envelope"></i> MrShininnnnn[at]gmail[dot]com </a>
-          <a href="https://mrshininnnnn.github.io/"><i class="fas fa-home"></i> Homepage </a>
-          <a href="https://www.linkedin.com/in/stshining/"><i class="fab fa-linkedin"></i> LinkedIn </a>
+          <a href="mailto:MrShininnnnn@gmail.com"><i class="fas fa-envelope"></i> MrShininnnnn[at]gmail[dot]com |</a>
+          <a href="https://mrshininnnnn.github.io/"><i class="fas fa-home"></i> Homepage |</a>
+          <a href="https://www.linkedin.com/in/stshining/"><i class="fab fa-linkedin"></i> LinkedIn |</a>
           <a href="https://github.com/MrShininnnnn"><i class="fab fa-github-alt"></i> GitHub </a>
           <br>
           Mchine Learning Engineer, Learnable, Inc. <br> 
