--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -15,7 +15,6 @@
     <link rel="stylesheet" href="{{ '/assets/css/styles.css' }}" media="screen" type="text/css">
     <link rel="stylesheet" href="{{ '/assets/css/print.css' }}" media="print" type="text/css">
     <link rel="stylesheet" href="{{ '/assets/css/cv.css' }}" type="text/css">
-    <link rel="stylesheet" href="{{ '/assets/css/fontawesome.css' }}" type="text/css">
     <link rel="stylesheet" href="{{ '/assets/css/navigation.css' }}" type="text/css">
     <meta name="google-site-verification" content="5nNLZZrN2cCkqk-YjHhN-2gGOZBmEb_Unc8oTvRtCCo" />
 
@@ -50,10 +49,10 @@
       <div class="inner clearfix">
         <center> 
           <h1>Ning Shi (石宁)</h1> 
-          <a href="mailto:MrShininnnnn@gmail.com"><i class="fas fa-envelope"></i> MrShininnnnn[at]gmail[dot]com |</a>
-          <a href="https://mrshininnnnn.github.io/"><i class="fas fa-home"></i> Homepage |</a>
-          <a href="https://www.linkedin.com/in/stshining/"><i class="fab fa-linkedin"></i> LinkedIn |</a>
-          <a href="https://github.com/MrShininnnnn"><i class="fab fa-github-alt"></i> GitHub </a>
+          <a href="mailto:MrShininnnnn@gmail.com"><img src="/assets/images/envelope-solid.svg" width="15px"> MrShininnnnn[at]gmail[dot]com |</a>
+          <a href="https://mrshininnnnn.github.io/"><img src="/assets/images/home-solid.svg" width="15px"> Homepage |</a>
+          <a href="https://www.linkedin.com/in/stshining/"><img src="/assets/images/linkedin-brands.svg" width="15px"> LinkedIn |</a>
+          <a href="https://github.com/MrShininnnnn"><img src="/assets/images/github-alt-brands.svg" width="15px"> GitHub </a>
           <br>
           Mchine Learning Engineer, Learnable, Inc. <br> 
           Graduate Student, Computer Science, Georgia Institute of Technology <br> 
