--- a/assets/css/cv.scss
+++ b/assets/css/cv.scss
@@ -9,18 +9,13 @@ hr {
   margin-top: 0; 
 }
 
-a:hover {
+center a:hover {
   color: #9ddcff;
 }  
 
 center a{
   color: #666666; 
   text-decoration: none;
-}
-
-center i {
-  color:#9ddcff; 
-  text-shadow:2px 2px 4px #000000;
 }
 
 p {
