--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -118,6 +118,15 @@
         <p id="title_left"> Lung Cancer Detection Using Deep Learning </p>
         <p id="title_right"><i> Mar. 2017 - Apr. 2017 </i></p>
 
+        <h1 id="section"> Publications</h1>
+        <hr noshade>
+        <p id="text"><b> The Relationship of Academic Capital and Altmetrics: Effects of Elsevier Metrics on Mendeley Reader Count </b></p>
+        <li> Ning Shi </li>
+        <li> Advisors:
+        <a href="https://www.linkedin.com/in/farrazzak/"> Farid Razzak </a> and 
+        <a href="https://www.linkedin.com/in/thomas-christo-ph-d-3330922/"> Thomas Christo </a></li>
+        <li> A thesis submitted in partial fulfillment of the requirements for the degree Master of Science in Management and Systems at New York University</li>
+
         <h1 id="section"> Services</h1>
         <hr noshade>
         <p id="left"> Secondary Reviewer of EMNLP-IJCNLP 2019 </p>
