--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -90,7 +90,7 @@
         <p id="title_left"> Machine Learning Engineer </p>
         <p id="title_right"><i> Sep. 2018 - Now </i></p>
         <p id="title_left"> Machine Learning Engineer Intern</p>
-        <p id="title_right"><i> Jul. 2018 - Aug. 2018 </i></p>
+        <p id="title_right"><i> Jul. 2018 - Sep. 2018 </i></p>
         <li> Applied machine learning techniques to personalize educational productions for users </li>
         <li> Worked in a fast-paced and aglie environment to deliver extra features for online productions </li>
         <li> Followed latest papers and reproduced models to improve existing productions </li>
@@ -103,9 +103,20 @@
         <li> Developed digital currency monitors and underlying modules for trading systems </li>
         <li> Requested, preprocessed and managed data over 10+ exchanges’ APIs </li>
         <li> HTML, CSS, JavaScript, Python, Flask, MongoDB </li>
+        <p id="title_left"><b> China Net Cloud (Shanghai) Co., Ltd </b></p>
+        <p id="title_right"><b> Shanghai, China </b></p>
+        <p id="title_left"> Project Manager </p>
+        <p id="title_right"><i> Jul. 2014 - Mar. 2016 </i></p>
+        <p id="title_left"> Project Manager Intern</p>
+        <p id="title_right"><i> Mar. 2014 - Jul. 2014 </i></p>
+        <li> Managed projects end to end and took ultimate responsibility for projects’ success </li>
+        <li> Handled business with AWS and Alibaba Could including purchasing servers, reviewing bills, etc. </li>
+        <li> Supported engineers to config servers, cooperate with clients, plan data transmission, etc. </li>
+        <li> SugarCRM, Zabbix, AWS, Alibaba Could, Trello, Draw.io, Wiki </li>
 
         <h1 id="section"> Technical Projects</h1>
         <hr noshade>
+
         <p id="title_left"><b> Textual Classification </b></p>
         <p id="title_right"><b> Learnable, Inc. </b></p>
         <p id="title_left"> High School Physics Questions Knowledge Points Tagging </b></p>
@@ -113,6 +124,7 @@
 
         <h1 id="section"> Academic Projects</h1>
         <hr noshade>
+
         <p id="title_left"><b> HackNYU </b></p>
         <p id="title_right"><b> New York University </b></p>
         <p id="title_left"> Lung Cancer Detection Using Deep Learning </p>
@@ -120,6 +132,7 @@
 
         <h1 id="section"> Publications</h1>
         <hr noshade>
+
         <p id="text"><b> The Relationship of Academic Capital and Altmetrics: Effects of Elsevier Metrics on Mendeley Reader Count </b></p>
         <li> Ning Shi </li>
         <li> Advisors:
