--- a/_layouts/coursework.html
+++ b/_layouts/coursework.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="{{ '/assets/css/styles.css' }}" media="screen" type="text/css">
     <link rel="stylesheet" href="{{ '/assets/css/print.css' }}" media="print" type="text/css">
-    <link rel="stylesheet" href="{{ '/assets/css/main.css' }}" type="text/css">
+    <link rel="stylesheet" href="{{ '/assets/css/coursework.css' }}" type="text/css">
     <link rel="stylesheet" href="{{ '/assets/css/navigation.css' }}" type="text/css">
     <meta name="google-site-verification" content="5nNLZZrN2cCkqk-YjHhN-2gGOZBmEb_Unc8oTvRtCCo" />
 
