--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -133,6 +133,10 @@
         <h1 id="section"> Publications</h1>
         <hr noshade>
 
+        <p id="text"><b> The Impact of Emotion On Social Media Content Consumption: Evidence From Video Analysis On Live Streaming Platforms </b></p>
+        <li> <a href="https://www.linkedin.com/in/keran-zhao-65a2a07b/"> Keran Zhao</a>, <a href="https://www.linkedin.com/in/yingda-lu-b4749512/">Yingda Lu</a>, <a href="https://mrshininnnnn.github.io/"><b>Ning Shi</b></a>, <a href="https://yuhenghu.com/">Yuheng Hu</a> </li>
+        <li> 2019 INFORMS Annual Meeting, Seatle, WA</li>
+
         <p id="text"><b> The Relationship of Academic Capital and Altmetrics: Effects of Elsevier Metrics on Mendeley Reader Count </b></p>
         <li> Ning Shi </li>
         <li> Advisors:
