--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,6 +1,10 @@
 ---
 ---
 
-p a:hover {
-    text-decoration: underline;
+#main-content a {
+    color: #666666;
 }
+
+#main-content a:hover {
+  color: #9ddcff;
+}  
