--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -135,7 +135,7 @@
 
         <p id="text"><b> The Impact of Emotion On Social Media Content Consumption: Evidence From Video Analysis On Live Streaming Platforms </b></p>
         <li> <a href="https://www.linkedin.com/in/keran-zhao-65a2a07b/"> Keran Zhao</a>, <a href="https://www.linkedin.com/in/yingda-lu-b4749512/">Yingda Lu</a>, <a href="https://mrshininnnnn.github.io/"><b>Ning Shi</b></a>, <a href="https://yuhenghu.com/">Yuheng Hu</a> </li>
-        <li> 2019 INFORMS Annual Meeting, Seatle, WA</li>
+        <li> In <i> the 2019 Institute for Operations Research and the Management Sciences Annual Meeting, Seatle, WA</i>. <a href="http://meetings2.informs.org/wordpress/seattle2019/"><b>INFORMS 2019</b></a>.</li>
 
         <p id="text"><b> The Relationship of Academic Capital and Altmetrics: Effects of Elsevier Metrics on Mendeley Reader Count </b></p>
         <li> Ning Shi </li>
