--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -138,7 +138,7 @@
         <li> In <i> the 2019 Institute for Operations Research and the Management Sciences Annual Meeting, Seatle, WA</i>. <a href="http://meetings2.informs.org/wordpress/seattle2019/"><b>INFORMS 2019</b></a>.</li>
 
         <p id="text"><b> The Relationship of Academic Capital and Altmetrics: Effects of Elsevier Metrics on Mendeley Reader Count </b></p>
-        <li> Ning Shi </li>
+        <li><b> Ning Shi </b></li>
         <li> Advisors:
         <a href="https://www.linkedin.com/in/farrazzak/"> Farid Razzak </a> and 
         <a href="https://www.linkedin.com/in/thomas-christo-ph-d-3330922/"> Thomas Christo </a></li>
