--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -37,9 +37,9 @@
         <ul>
           <li><a href="https://mrshininnnnn.github.io/">About</a></li>
           <li><a href="https://mrshininnnnn.github.io/coursework/">Coursework</a></li>
-          <li><a href="https://mrshininnnnn.github.io/project/">Project</a></li>
-          <li><a href="https://mrshininnnnn.github.io/publication/">Publication</a></li>
-          <li><a href="https://mrshininnnnn.github.io/blog/">Blog</a></li>
+          <li><a href="https://mrshininnnnn.github.io/projects/">Projects</a></li>
+          <li><a href="https://mrshininnnnn.github.io/publications/">Publications</a></li>
+          <li><a href="https://mrshininnnnn.github.io/blogs/">Blogs</a></li>
           <li><a href="https://mrshininnnnn.github.io/cv/">CV</a></li>
         </ul>
       </div>
