--- a/assets/css/projects.scss
+++ b/assets/css/projects.scss
@@ -1,3 +1,18 @@
 ---
 ---
 
+h1 {
+  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+}
+
+#main-content {
+  width: 100%;
+}
+
+#main-content a{
+  color: #666666; 
+}
+
+#main-content a:hover {
+  color: #9ddcff;
+}
