--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -62,6 +62,7 @@
             <img src="/assets/images/bar.png" width="200px"> <br>
             <a href="https://github.com/MrShininnnnn"><img src="/assets/images/icon_03.png" width="40px"></a>
             <a href="https://www.linkedin.com/in/stshining/"><img src="/assets/images/icon_04.png" width="40px"></a>
+            <a href="https://medium.com/@mrshininnnnn"><img src="/assets/images/icon_05.png" width="40px"></a>
             <br><img src="/assets/images/bar.png" width="200px">
           </p>
         </aside>
