--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -92,39 +92,73 @@
         <p id="title_right"><i> Sep. 2018 - Now </i></p>
         <p id="title_left"> Machine Learning Engineer Intern</p>
         <p id="title_right"><i> Jul. 2018 - Sep. 2018 </i></p>
-        <li> Applied machine learning techniques to personalize educational productions for users </li>
-        <li> Worked in a fast-paced and aglie environment to deliver extra features for online productions </li>
-        <li> Followed latest papers and reproduced models to improve existing productions </li>
+        <li> Develop, evaluate, and improve solutions by machine learning and statistical modeling techniques </li>
+        <li> Follow the latest conferences, reproduce papers, and develop new methods to fulfill specific requirements </li>
+        <li> Supervise the NLP group and be in charge of several studies such as language modeling and semantic parsing </li>
+        <li> Work in an agile team to deliver features in a fast pace </li>
         <li> Python, Tensorflow, PyTorch, Keras</li>
         <p id="title_left"><b> Pythagoras Investment Management LLC </b></p>
         <p id="title_right"><b> New York, USA </b></p>
         <p id="title_left"> Algorithm Engineer Intern </p>
         <p id="title_right"><i> Dec. 2017 - May. 2018 </i></p>
-        <li> Designed and developed pipelines for data preprocessing, data integrity check, and data storage </li>
-        <li> Developed digital currency monitors and underlying modules for trading systems </li>
-        <li> Requested, preprocessed and managed data over 10+ exchanges’ APIs </li>
-        <li> HTML, CSS, JavaScript, Python, Flask, MongoDB </li>
+        <li> Develop and adopt best practices to design and build an automatic digital currency trading system </li>
+        <li> Collaborate with the team in developing a pipeline from scratch for data management </li>
+        <li> Manage over 10+ exchanges’ APIs </li>
+        <li> HTML, CSS, JavaScript, Python, SQL, Flask, MongoDB </li>
         <p id="title_left"><b> China Net Cloud (Shanghai) Co., Ltd </b></p>
         <p id="title_right"><b> Shanghai, China </b></p>
         <p id="title_left"> Project Manager </p>
         <p id="title_right"><i> Jul. 2014 - Mar. 2016 </i></p>
         <p id="title_left"> Project Manager Intern</p>
         <p id="title_right"><i> Mar. 2014 - Jul. 2014 </i></p>
-        <li> Managed projects end to end and took ultimate responsibility for projects’ success </li>
-        <li> Handled business with AWS and Alibaba Could including purchasing servers, reviewing bills, etc. </li>
-        <li> Supported engineers to config servers, cooperate with clients, plan data transmission, etc. </li>
-        <li> SugarCRM, Zabbix, AWS, Alibaba Could, Trello, Draw.io, Wiki </li>
+        <li> Manage projects end to end and take ultimate responsibility for projects’ success </li>
+        <li> Handle business with AWS and Alibaba Could including purchasing servers, reviewing bills, and solving tickets </li>
+        <li> Support engineers to transfer information, design server architecture, and cooperate with clients </li>
+        <li> Optimize existing procedure and maintain corresponding wiki pages </li>
+        <li> Microsoft Office, SugarCRM, Zabbix, AWS, Alibaba Could, Trello, Draw.io, Wiki </li>
 
         <h1 id="section"> Technical Projects</h1>
         <hr noshade>
+
+        <p id="title_left"><b> Data Processing </b></p>
+        <p id="title_right"><b> Learnable, Inc. </b></p>
+        <p id="title_left"> 14 Million Question Bank Management </b></p>
+        <p id="title_right"><i> Jan. 2019 - May. 2019 </i></p>
 
         <p id="title_left"><b> Textual Classification </b></p>
         <p id="title_right"><b> Learnable, Inc. </b></p>
         <p id="title_left"> High School Physics Questions Knowledge Points Tagging </b></p>
         <p id="title_right"><i> Jul. 2018 - Sep. 2018 </i></p>
 
+        <p id="title_left"><b> Language Modeling </b></p>
+        <p id="title_right"><b> Learnable, Inc. </b></p>
+        <p id="title_left"> Chinese-LaTeX-Mixed Mathematics Masked Language Modeling </b></p>
+        <p id="title_right"><i> Jun. 2019 - Nov. 2019 </i></p>
+
+        <p id="title_left"><b> Sequential Learning </b></p>
+        <p id="title_right"><b> Learnable, Inc. </b></p>
+        <p id="title_left"> Post-Processing for Deep Learning Based Optical Character Recognition </b></p>
+        <p id="title_right"><i> Mar. 2019 - Now </i></p>
+        <p id="title_left"> Formal Language Parsing for Automatic Grading System </b></p>
+        <p id="title_right"><i> Feb. 2019 - Now </i></p>
+
+        <p id="title_left"><b> Software Development </b></p>
+        <p id="title_right"><b> Pythagoras Investment Management LLC </b></p>
+        <p id="title_left"> Pythagoras Digital Funds Trading Systems Development </b></p>
+        <p id="title_right"><i> Dec. 2017 - May. 2018 </i></p>
+
         <h1 id="section"> Academic Projects</h1>
         <hr noshade>
+
+        <p id="title_left"><b> Dissertation </b></p>
+        <p id="title_right"><b> New York University </b></p>
+        <p id="title_left"> The Relationship of Academic Capital and Altmetrics </p>
+        <p id="title_right"><i> Sep. 2017 - Jul. 2018 </i></p>
+
+        <p id="title_left"><b> AIChallenger </b></p>
+        <p id="title_right"><b> New York University </b></p>
+        <p id="title_left"> English-Chinese Machine Translation Task </p>
+        <p id="title_right"><i> Sep. 2017 - May. 2018 </i></p>
 
         <p id="title_left"><b> HackNYU </b></p>
         <p id="title_right"><b> New York University </b></p>
