--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -168,7 +168,7 @@
         <h1 id="section"> Publications</h1>
         <hr noshade>
 
-        <p id="text"><a href="https://arxiv.org/abs/2003.06658"><b> Synonymous Generalization in Sequence-to-Sequence Recurrent Networks </b></a></p>
+        <p id="text"><b> Synonymous Generalization in Sequence-to-Sequence Recurrent Networks </b></p> <a href="https://arxiv.org/abs/2003.06658">[arXiv]</a>
         <li> <a href="https://mrshininnnnn.github.io/"><b>Ning Shi</b></a> </li>
         <li> Submitted. </li>
 
