--- a/assets/css/cv.scss
+++ b/assets/css/cv.scss
@@ -27,6 +27,15 @@ li a{
   text-decoration: none;
 }
 
+p a:hover {
+  color: #9ddcff;
+}  
+
+p a{
+  color: #666666; 
+  text-decoration: none;
+}
+
 p {
   color: #666666;  
 }
