--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -63,6 +63,7 @@
             <a href="https://github.com/MrShininnnnn"><img src="/assets/images/icon_03.png" width="40px"></a>
             <a href="https://www.linkedin.com/in/stshining/"><img src="/assets/images/icon_04.png" width="40px"></a>
             <a href="https://medium.com/@mrshininnnnn"><img src="/assets/images/icon_05.png" width="40px"></a>
+            <a href="https://scholar.google.com/citations?hl=en&user=qaqVNMQAAAAJ"><img src="/assets/images/icon_06.png" width="40px"></a>
             <br><img src="/assets/images/bar.png" width="200px">
           </p>
         </aside>
