Update index and CV

--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -50,10 +50,11 @@
         <center> 
           <h1>Ning Shi (石宁)</h1> 
           <a href="mailto:MrShininnnnn@gmail.com"><img src="/assets/images/envelope-solid.svg" width="15px"> MrShininnnnn[at]gmail[dot]com |</a>
-          <a href="https://mrshininnnnn.github.io/"><img src="/assets/images/home-solid.svg" width="15px"> Homepage |</a>
-          <a href="https://www.linkedin.com/in/stshining/"><img src="/assets/images/linkedin-brands.svg" width="15px"> LinkedIn |</a>
-          <a href="https://github.com/MrShininnnnn"><img src="/assets/images/github-alt-brands.svg" width="15px"> GitHub </a>
-          <a href="https://medium.com/@mrshininnnnn"><img src="/assets/images/medium-brands.svg" width="15px"> Medium </a>
+          <a href="https://mrshininnnnn.github.io/"><img src="/assets/images/home-solid.svg" width="15px"> Homepage </a> | 
+          <a href="https://www.linkedin.com/in/stshining/"><img src="/assets/images/linkedin-brands.svg" width="15px"> LinkedIn </a> | 
+          <a href="https://github.com/MrShininnnnn"><img src="/assets/images/github-alt-brands.svg" width="15px"> GitHub </a> | 
+          <a href="https://medium.com/@mrshininnnnn"><img src="/assets/images/medium-brands.svg" width="15px"> Medium </a> | 
+          <a href="https://scholar.google.com/citations?hl=en&user=qaqVNMQAAAAJ"><img src="/assets/images/googlescholar.svg" width="15px"> Medium </a>
           <br>
           Mchine Learning Engineer, Learnable, Inc. <br> 
           Graduate Student, Computer Science, Georgia Institute of Technology <br> 
