--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -54,7 +54,7 @@
           <a href="https://www.linkedin.com/in/stshining/"><img src="/assets/images/linkedin-brands.svg" width="15px"> LinkedIn </a> | 
           <a href="https://github.com/MrShininnnnn"><img src="/assets/images/github-alt-brands.svg" width="15px"> GitHub </a> | 
           <a href="https://medium.com/@mrshininnnnn"><img src="/assets/images/medium-brands.svg" width="15px"> Medium </a> | 
-          <a href="https://scholar.google.com/citations?hl=en&user=qaqVNMQAAAAJ"><img src="/assets/images/googlescholar.svg" width="15px"> Medium </a>
+          <a href="https://scholar.google.com/citations?hl=en&user=qaqVNMQAAAAJ"><img src="/assets/images/googlescholar.svg" width="15px"> Google Scholar </a>
           <br>
           Mchine Learning Engineer, Learnable, Inc. <br> 
           Graduate Student, Computer Science, Georgia Institute of Technology <br> 
