--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -169,13 +169,17 @@
         <h1 id="section"> Publications</h1>
         <hr noshade>
 
+        <p id="text"><b> Recurrent Inference in Text Editing </b></a>
+        <li> <a href="https://mrshininnnnn.github.io/"><b>Ning Shi</b></a>, Ziheng Zeng, Haotian Zhang, Yichen Gong </li>
+        <li> Findings of the Association for Computational Linguistics (ACL): Empirical Methods in Natural Language Processing (EMNLP) 2020. </li>
+
         <p id="text"><b> Synonymous Generalization in Sequence-to-Sequence Recurrent Networks </b><a href="https://arxiv.org/abs/2003.06658">[arXiv]</a></p>
         <li> <a href="https://mrshininnnnn.github.io/"><b>Ning Shi</b></a> </li>
         <li> Submitted. </li>
 
         <p id="text"><b> The Impact of Emotion On Social Media Content Consumption: Evidence From Video Analysis On Live Streaming Platforms </b></p>
         <li> <a href="https://www.linkedin.com/in/keran-zhao-65a2a07b/"> Keran Zhao</a>, <a href="https://www.linkedin.com/in/yingda-lu-b4749512/">Yingda Lu</a>, <a href="https://mrshininnnnn.github.io/"><b>Ning Shi</b></a>, <a href="https://yuhenghu.com/">Yuheng Hu</a> </li>
-        <li> In <i> the 2019 Institute for Operations Research and the Management Sciences Annual Meeting, Seatle, WA</i>. <a href="http://meetings2.informs.org/wordpress/seattle2019/"><b>INFORMS 2019</b></a>. </li>
+        <li> Annual Meeting of the Institute for Operations Research and the Management Sciences (INFORMS), 2019.</li>
 
         <p id="text"><b> The Relationship of Academic Capital and Altmetrics: Effects of Elsevier Metrics on Mendeley Reader Count </b></p>
         <li><b> Ning Shi </b></li>
